[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fonts/RampartOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Manrope-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/kunimi square sprite.png" type="Texture" id=3]
[ext_resource path="res://Sprites/rocky square sprite 2.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Menu.gd" type="Script" id=5]
[ext_resource path="res://Audios/Menu song.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 19
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
extra_spacing_char = 3
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.129412, 0.133333, 0.282353, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.682353, 0.819608, 0.960784, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.321569, 0.486275, 0.654902, 1 )

[sub_resource type="DynamicFont" id=6]
size = 40
outline_color = Color( 0.313726, 0.380392, 0.580392, 1 )
use_filter = true
extra_spacing_char = 4
font_data = ExtResource( 2 )

[node name="Menu" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="ColorRect" parent="."]
margin_left = 7.15216
margin_top = 5.38596
margin_right = 1287.15
margin_bottom = 725.386
color = Color( 0.498039, 0.654902, 0.768627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="By" type="Label" parent="."]
margin_left = 549.224
margin_top = 244.891
margin_right = 734.224
margin_bottom = 273.891
custom_fonts/font = SubResource( 1 )
text = "By Ariana Malavasi"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 3.4379
margin_top = 56.1436
margin_right = 1283.44
margin_bottom = 235.144
custom_fonts/font = SubResource( 2 )
text = "The Inner Workings
 of Ari's Mind"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 787.182
margin_top = 183.943
margin_right = 1313.18
margin_bottom = 709.943
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = -23.0039
margin_top = 188.103
margin_right = 502.996
margin_bottom = 714.103
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
margin_left = 563.067
margin_top = 309.299
margin_right = 713.067
margin_bottom = 369.299
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Button" parent="."]
margin_left = 457.405
margin_top = 403.288
margin_right = 814.405
margin_bottom = 463.288
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Instructions"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Artist Statement" type="Button" parent="."]
margin_left = 448.692
margin_top = 503.851
margin_right = 820.692
margin_bottom = 563.851
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Artist Statement"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
autoplay = true

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="pressed" from="Artist Statement" to="." method="_on_Artist_Statement_pressed"]
